# cafelatte

./: .env  Cargo.toml  README.md
database/: create_database.sql  schemas.sql
src/: lib.rs  main.rs
src/core/entities/: login.rs  mod.rs  user.rs  user_payload.rs
src/core/errors/: jwt_errors.rs  mod.rs  user_errors.rs
src/core/ports/: mod.rs  user_port.rs
src/core/services/: mod.rs  user_service.rs  user_service_stub.rs
src/infrastructure/api/: mod.rs
src/infrastructure/api/controllers/: user_controller.rs
src/infrastructure/api/dto/: mod.rs  user.rs  user_request.rs  user_response.rs
src/infrastructure/api/handlers/: user_handler.rs
src/infrastructure/api/middlewares/: auth_middleware.rs
src/infrastructure/data/: mod.rs  mysql.rs
src/infrastructure/data/models/: user.rs
src/infrastructure/data/repositories/: user_repository.rs
src/tests/core/services/: mod.rs  user_service_stub.rs
src/tests/infrastructure/api/controllers/: mod.rs  user_controller_test.rs
src/utils/: mod.rs  security_util.rs
