[package]
name = "salvo-skeleton"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
anyhow = "1.0.71"
