[package]
name = "cafelatte"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-service = "2.0.2"
futures = "0.3.28"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
thiserror = "1.0.40"
env_logger = "0.10.0"
log = "0.4.19"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
chrono = "0.4.26"
